<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>Wicked-Proxy</artifactId>
        <groupId>org.catas</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <artifactId>proxy-server</artifactId>
    <!-- <packaging>jar</packaging> -->

    <dependencies>
        <dependency>
            <groupId>org.catas</groupId>
            <artifactId>common</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.graalvm.nativeimage</groupId>
            <artifactId>svm</artifactId>
            <version>22.3.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- <dependency> -->
        <!--     <groupId>io.micronaut</groupId> -->
        <!--     <artifactId>micronaut-runtime</artifactId> -->
        <!--     <version>${micronaut.version}</version> -->
            <!-- <scope>test</scope> -->
        <!-- </dependency> -->
        <!-- <dependency> -->
        <!--     <groupId>io.micronaut</groupId> -->
        <!--     <artifactId>micronaut-inject</artifactId> -->
        <!--     <version>${micronaut.version}</version> -->
        <!--     &lt;!&ndash; <scope>test</scope> &ndash;&gt; -->
        <!-- </dependency> -->
        <!-- <dependency> -->
        <!--     <groupId>io.micronaut</groupId> -->
        <!--     <artifactId>micronaut-inject-java</artifactId> -->
        <!--     <version>${micronaut.version}</version> -->
            <!-- <scope>test</scope> -->
        <!-- </dependency> -->
        <dependency>
            <groupId>io.micronaut.test</groupId>
            <artifactId>micronaut-test-junit5</artifactId>
            <version>4.2.1</version>
            <scope>test</scope>
        </dependency>
        <!-- <dependency> -->
        <!--     <groupId>io.micronaut</groupId> -->
        <!--     <artifactId>micronaut-http-server-netty</artifactId> -->
        <!--     <version>${micronaut.version}</version> -->
        <!--     <scope>test</scope> -->
        <!-- </dependency> -->
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>com.catas.wicked.server.HttpProxyApplication</mainClass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.maven.plugin.version}</version>
                <configuration>
                    <mainClass>com.catas.wicked.server.HttpProxyApplication</mainClass>
                    <linkerArgs>
                        <arg>management_ext.lib</arg>
                        <arg>psapi.lib</arg>
                    </linkerArgs>
                    <reflectionList>com.catas.wicked.server.HttpProxyApplication</reflectionList>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib</classpathPrefix>
                            <mainClass>com.catas.wicked.server.HttpProxyApplication</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Class-path>./</Class-path>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plgin.version}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut</groupId>
                            <artifactId>micronaut-inject-java</artifactId>
                            <version>${micronaut.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Amicronaut.processing.group=org.catas</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                    <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
                    <argLine>-ea</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <type>jar</type>
                            <includeTypes>jar</includeTypes>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>*.*</include>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <includes>
                    <include>*.*</include>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </testResource>
        </testResources>
    </build>

</project>